src/snapshots/ruuvi_decoders__e1__tests__maximum.snap
---
source: src/e1.rs
expression: res
---
DataFormatE1 {
    temperature: Some(
        -163.835,
    ),
    humidity: Some(
        0.0,
    ),
    pressure: Some(
        500.0,
    ),
    pm1_0: Some(
        0.0,
    ),
    pm2_5: Some(
        0.0,
    ),
    pm4_0: Some(
        0.0,
    ),
    pm10_0: Some(
        0.0,
    ),
    co2: Some(
        0,
    ),
    voc_index: Some(
        0,
    ),
    nox_index: Some(
        0,
    ),
    luminosity: Some(
        0.0,
    ),
    measurement_sequence: Some(
        0,
    ),
    flags: 0,
    mac_address: "cbb8334c884f",
}
